--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>O</span>
     </div>
     <div class="description">
-        <span>For Shihikimori Only</span>
+        <span>Ini Untukmu Yon</span>
     </div>
     <div class="button">
         <button>
